css/main.css
/* ... */
.btn {
	font-family: 'Open Sans';
	font-weight: 700;
	color: #FFF;
}

#bottom a {
	color: #0F6095;
	font-size: 18px;
	line-height: 20px;
}

#bottom a:hover {
	color: #ff4000;
}

.bold {
	font-family: 'Open Sans';
	font-weight: 700;
	line-height: 14px;
}

#subheader h1 {
	color: #79C040;
	font-family: 'Open Sans';
	font-size: 18px;
	line-height: 20px;
	font-weight: 700;

}

#subheader p {
	color: #585b5b;
	font-family: 'Open Sans';
	font-size: 14px;
	font-weight: 700;
}

#service-media {
	position: relative;
    padding-bottom: 56.25%; /* 16/9 ratio */
    padding-top: 30px; /* IE6 workaround*/
    height: 0;
    overflow: hidden;
}

#service-media iframe,
#service-media object,
#service-media embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.service-link {
	font-family: 'Open Sans';
	color: #FF4000;
	font-weight: 700;
}

.service-description {
	font-size: 12px;
}

#service-name {
	color:#79C040;
}

#tips {
	list-style: disc;
}

#additional-resources a {
	color: #0F6095;
	text-decoration: underline;
}

th {
	font-family: 'Open Sans';
	font-size: 12px;
	font-weight: 700;
}

.author-name {
	font-size: 12px;
}

.modal-title {
	color: #79C040;
	font-weight: 700;
}

#instructions-title {
	font-size: 18px;
	line-height: 20px;
	color: #FF4000;
}

#subnav a {
	color: #FF4000;
	font-weight: 700;
	font-family: 'Open Sans';
}

#subnav .active {
	color: #0F6095;
}

#subheader a {
	color: #FF4000;
}

#elements h3 {
	color: #FFF;
}

#elements .draggable {
	font-family: 'Open Sans';
	font-weight: 700;
	font-size: 12px;
	line-height: 14px;
}

.temp-text{
	font-family: 'Open Sans';
	font-size: 12px;
	font-weight: 700;
	line-height: 14px;
	width: 150px;
}

.plain {
	font-size: 12px;
	line-height: 12px;
	position: relative;
	top: -7px;
	list-style:disc;
}

.plain li {
	margin-left:15px;
	margin-bottom: 5px;
}

#add-droppable {
	font-family: 'Open Sans';
	color: #0F6095;
	font-size: 12px;
	font-weight: 700;
}

#img-upload-form label {
	font-family: 'Open Sans';
	color: #0F6095;
	font-size: 12px;
	font-weight: 700;
}

/*END FONTS*/


/*POSITION */
.navbar {
	margin-bottom: 0;
}

/*#bottom, footer, #about-subheader {
	position: relative;
	top: -50px;
}*/

#main-text a {
	margin-top: 25px;
}

#bottom {
	margin-top: 50px;
}

#bottom img {
	padding-bottom: 10px;
}

footer {
	margin-bottom: 100px;
}

#subnav {
	position : relative;
	top: -60px;
}
/*
#subnav li {
	padding-right: 110px;
}*/

#subheader h1 {
	margin-bottom: 5px;
}

hr {
	margin:0;
}

.service-header a {
	padding-left: 10px;
}

#service-name {
	padding-left: 15px;
	display: inline;
}

#tips li {
	margin-bottom: 10px;
}

#service-description li, #tips li {
	position: relative;
	left: 15px;
}

.modal-body {
	text-align: center;
}

#teach #subheader, #teach #teach-main {
	position: relative;
	top: -31px;
}

#teach footer {
	position: relative;
	top: -56px;
}

#lesson-form {
	text-align: center;
}

#step-builder {
	position: relative;
	top: -25px;
}

#teach-dots {
	text-align: center;
	position: relative;
	top: -30px;
	left:30px;
}

#teach-dots-amount {
	position: relative;
	left:-30px;
}

#instructions section{
	position: relative;
	top: -10px;
	height: 400px;
}

#elements .draggable {
	position:relative;
	background-color: #FFF;
	border: 3px dashed #999;
	border-radius: 15px;
	height: 70px;
	margin-bottom: 10px;
	font-weight: 700;
	text-align: center;
	z-index: 1;
	padding-top: 13px;
}

#elements p{
	padding-top: 10px;
}

#elements hr {
	padding: 5px;
}

#advanced-options {
	padding-top: 25px;
}

#add-droppable img {
	margin-right: 5px;
}

#step-text-content {
	margin: 15px auto;
	width: 310px;
}

#close-lesson {
	display:none;
}
/*END POSITION*/


/*COLORS*/

#teach-main {
	background-color: #BCDCE9;
}

.close {
	opacity: 1;
}

#elements {
	background-color: #BFBFBF;
}

#congrats-icons {
	background-color: #C7E4EE;
}

#congrats-share, #congrats-links {
	background-color: #FFC9AE
}

hr {
	height: 1px;
	background-color: #BFBFBF;
}

/*END COLORS*/

.right {
	float: right;
}

.left {
	float:left;
}

h1 {
	font-family: 'Open Sans', sans-serif;
	font-size: 24px;
	font-weight: 700;
	line-height: 26px;
	margin-top: 0px;
}

h2 {
	font-family: 'Open Sans', sans-serif;
	font-size: 18px;
	font-weight: 700;
	line-height: 20px;
	margin: 0px;
}

ul{
	padding-left: 0px;
	list-style: none;
}

.navbar li, footer li  {
	padding-top: 5px;
}

.nav {
	margin-top: 56px;
	margin-left: -30px;
	height: 33px;
	background-color: #585b5b;
}

.navbar-nav li a {
	padding-top: 0px;
	font-size: 18px;
	line-height: 20px;
	font-weight: 700;
	color: #FFF;
}

.navbar-nav li a:hover{
	color: #74BBD4;
	text-decoration: none;
}

#bfUserName, #signOutLink {
	display: none;
}


#subheader img {
	float: right;
}

.login-required {
	display: none;
}

#signinlinks {
	position: relative;
	top: 50px;
	left: -100px;
}

#main-text {
	margin-top: 50px;
}

#main-text .lesson-name {
	padding-bottom: 15px;
}

.btn-primary {
	background-color: #FF4000;
	border-color: #FF4000;
	font-weight: 700;
}

.btn-primary:hover {
	background-color: #FF8C66;
	border-color: #FF8C66;
	font-weight: 700;
}

.btn-default {
	background-color: #0F6095;
	border-color: #0F6095;
	font-weight: 700;
}

.btn-default:hover {
	background-color: #74BBD4;
	border-color: #74BBD4;
	color: #0F6095;
	font-weight: 700;
}

.btn-green {
  background-color: #79c040;
  border-color: #79c040;
}

.btn-green:hover {
  background-color: #C9E6B3;
  border-color: #C9E6B3;
}

.btn-blue {
 background-color: #74BBD4;
 border-color: #74BBD4;
}

.btn-blue:hover {
  background-color: #C7E4EE;
  border-color: #C7E4EE;
}

.btn-gray {
	background-color: #BFBFBF;
	border-color: #BFBFBF;
	font-weight: 700;
}

.btn-gray:hover {
	background-color: #BFBFBF;
	border-color: #BFBFBF;
	font-weight: 700;
}

#laptop {
	width: 420px;
	height: 240px;
}

#main-video iframe {
	position:absolute;
	top: 25px;
	left: 75px;
}

#about-main {
	padding-top: 25px;
}

#category-menu{
	margin-top: 15px;
	margin-bottom: 10px;
}
/* ... */

